--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
-	<script src="script.js" defer></script>
 	<title>WebGazer</title>
 </head>
 <body>
+	<p id="coordinates"></p>
+	<script src="script.js" defer></script>
 
 </body>
 </html>
