adding calibration pt 2

--- a/calibration.html
+++ b/calibration.html
@@ -10,12 +10,12 @@
 <body>
 	<p id="coordinates" style="position: absolute;"></p>
 
-	<div class="calib" style="top:0;left:25%;"></div>
-	<div class="calib" style="top:0;right:25%;"></div>
-	<div class="calib" style="bottom:0;left:25%;"></div>
-	<div class="calib" style="bottom:0;right:25%;"></div>
-	<div class="calib" style="top:50%;left:0;transform: translateY(-50%);"></div>
-	<div class="calib" style="top:50%;right: 0;transform: translateY(-50%);"></div>
+	<div class="calib" style="top:0;left:25%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
+	<div class="calib" style="top:0;right:25%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
+	<div class="calib" style="bottom:0;left:25%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
+	<div class="calib" style="bottom:0;right:25%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
+	<div class="calib" style="top:50%;left:0;transform: translateY(-50%);" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
+	<div class="calib" style="top:50%;right: 0;transform: translateY(-50%);" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
 
 	<div class="center">
 		<p id="instructions">PLEASE ENABLE YOUR WEB CAMERA<br>CALIBRATION WILL BEGIN SHORTLY</p>
