adding calibration pt 4

--- a/calibration.html
+++ b/calibration.html
@@ -23,6 +23,9 @@
 	<!--INSTRUCTIONS-->
 	<div class="center">
 		<p id="instructions">PLEASE ENABLE YOUR WEB CAMERA<br>CALIBRATION WILL BEGIN SHORTLY</p>
+		<p id="instructions2"></p>
+		<p id="instructions3"></p>
+		<p id="instructions4"></p>
 	</div>
 
 	<!--FOR THE CIRCLE-->
