--- a/calibration.html
+++ b/calibration.html
@@ -10,7 +10,7 @@
 <body style="background-color: black;">
 
 	<!--MOUSE COORDS-->
-	<p id="coordinates" style="position: absolute;"></p>
+	<!--<p id="coordinates" style="position: absolute;"></p>-->
 
 	<!--CALIBRATION GIFS-->
 	<div class="calib" style="top:0;left:25%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
@@ -26,6 +26,7 @@
 		<p id="instructions2"></p>
 		<p id="instructions3"></p>
 		<p id="instructions4"></p>
+		<p id="instructions5"></p>
 	</div>
 
 	<!--FOR THE CIRCLE-->
