--- a/calibration.html
+++ b/calibration.html
@@ -39,6 +39,8 @@
 	<div class="circle" id="circle7" style="bottom:50%;left:25%;"></div>
 	<div class="circle" id="circle8" style="bottom:50%;right:25%;"></div>
 
+	<!-- DRAWN RESULTS PATH -->
+	<canvas id="my-canvas"></canvas>
 
 	<script src="script.js" defer></script>
 </body>
