--- a/calibration.html
+++ b/calibration.html
@@ -40,7 +40,7 @@
 	<div class="circle" id="circle8" style="bottom:50%;right:25%;"></div>
 
 	<!-- DRAWN RESULTS PATH -->
-	<canvas id="my-canvas"></canvas>
+	<canvas id="my-canvas" style="border: 1px solid #a6ffbe;display: none;"></canvas>
 
 	<script src="script.js" defer></script>
 </body>
