--- a/calibration.html
+++ b/calibration.html
@@ -15,10 +15,10 @@
 	<!--CALIBRATION GIFS-->
 	<div class="calib" style="top:0;left:25%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
 	<div class="calib" style="top:0;right:25%;" data-gifs='["words/moon.gif", "words/listen.gif", "words/lost.gif", "words/dance.gif", "words/day.gif"]'></div>
-	<div class="calib" style="bottom:0;left:25%;" data-gifs='["words/love.gif", "words/align.gif", "words/earth.gif", "words/ash.gif", "words/collected.gif"]'></div>
+	<div class="calib" style="bottom:0;left:25%;" data-gifs='["words/love.gif", "words/alignment.gif", "words/earth.gif", "words/ash.gif", "words/collected.gif"]'></div>
 	<div class="calib" style="bottom:0;right:25%;" data-gifs='["words/found.gif", "words/present.gif", "words/will.gif", "words/youth.gif", "words/sweet.gif"]'></div>
 	<div class="calib" style="top:50%;left:0;transform: translateY(-50%);" data-gifs='["words/year.gif", "words/abstain.gif", "words/stars.gif", "words/universe.gif", "words/devour.gif"]'></div>
-	<div class="calib" style="top:50%;right: 0;transform: translateY(-50%);" data-gifs='["words/align.gif", "words/dance.gif", "words/separate.gif", "words/found.gif", "words/sweet.gif"]'></div>
+	<div class="calib" style="top:50%;right: 0;transform: translateY(-50%);" data-gifs='["words/alignment.gif", "words/dance.gif", "words/separate.gif", "words/found.gif", "words/sweet.gif"]'></div>
 
 	<!--INSTRUCTIONS-->
 	<div class="center">
