--- a/calibration.html
+++ b/calibration.html
@@ -13,12 +13,12 @@
 	<!--<p id="coordinates" style="position: absolute;"></p>-->
 
 	<!--CALIBRATION GIFS-->
-	<div class="calib" style="top:0;left:25%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
-	<div class="calib" style="top:0;right:25%;" data-gifs='["words/moon.gif", "words/listen.gif", "words/lost.gif", "words/dance.gif", "words/day.gif"]'></div>
-	<div class="calib" style="bottom:0;left:25%;" data-gifs='["words/love.gif", "words/alignment.gif", "words/earth.gif", "words/ash.gif", "words/collected.gif"]'></div>
-	<div class="calib" style="bottom:0;right:25%;" data-gifs='["words/found.gif", "words/present.gif", "words/will.gif", "words/youth.gif", "words/sweet.gif"]'></div>
-	<div class="calib" style="top:50%;left:0;transform: translateY(-50%);" data-gifs='["words/year.gif", "words/abstain.gif", "words/stars.gif", "words/universe.gif", "words/devour.gif"]'></div>
-	<div class="calib" style="top:50%;right: 0;transform: translateY(-50%);" data-gifs='["words/alignment.gif", "words/dance.gif", "words/separate.gif", "words/found.gif", "words/sweet.gif"]'></div>
+	<div id="b1" class="calib" style="top:0;left:5%;" data-gifs='["words/together.gif", "words/soft.gif", "words/separate.gif", "words/memory.gif", "words/month.gif"]'></div>
+	<div id="b2" class="calib" style="top:0;right:5%;" data-gifs='["words/moon.gif", "words/listen.gif", "words/lost.gif", "words/dance.gif", "words/day.gif"]'></div>
+	<div id="b3" class="calib" style="bottom:0;left:5%;" data-gifs='["words/love.gif", "words/alignment.gif", "words/earth.gif", "words/ash.gif", "words/collected.gif"]'></div>
+	<div id="b4" class="calib" style="bottom:0;right:5%;" data-gifs='["words/found.gif", "words/present.gif", "words/will.gif", "words/youth.gif", "words/sweet.gif"]'></div>
+	<div id="b5" class="calib" style="top:50%;left:0;transform: translateY(-50%);" data-gifs='["words/year.gif", "words/abstain.gif", "words/stars.gif", "words/universe.gif", "words/devour.gif"]'></div>
+	<div id="b6" class="calib" style="top:50%;right: 0;transform: translateY(-50%);" data-gifs='["words/alignment.gif", "words/dance.gif", "words/separate.gif", "words/found.gif", "words/sweet.gif"]'></div>
 
 	<!--INSTRUCTIONS-->
 	<div class="center">
@@ -34,10 +34,13 @@
 	<div class="circle" id="circle2" style="top:0;right:0;"></div>
 	<div class="circle" id="circle3" style="bottom:0;left:0;"></div>
 	<div class="circle" id="circle4" style="bottom:0;right:0;"></div>
-	<div class="circle" id="circle5" style="top:0;left:50%;"></div>
-	<div class="circle" id="circle6" style="bottom:0;right:50%;"></div>
-	<div class="circle" id="circle7" style="bottom:50%;left:25%;"></div>
-	<div class="circle" id="circle8" style="bottom:50%;right:25%;"></div>
+	<div class="circle" id="circle5" style="top:0;left:45%;"></div>
+	<div class="circle" id="circle6" style="bottom:0;right:45%;"></div>
+	<div class="circle" id="circle7" style="bottom:75%;left:25%;"></div>
+	<div class="circle" id="circle8" style="bottom:75%;right:25%;"></div>
+
+	<div class="circle" id="circle9" style="bottom:25%;left:25%;"></div>
+	<div class="circle" id="circle10" style="bottom:25%;right:25%;"></div>
 
 	<!-- DRAWN RESULTS PATH -->
 	<canvas id="my-canvas" style="border: 1px solid #a6ffbe;display: none;"></canvas>
