--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
 
       .popup-content {
-        width: 300px;
+        width: 320px;
         padding: 15px;
         position: absolute;
         bottom: 5%;
@@ -38,7 +38,7 @@
 	      }
 
 	      .popup-content {
-	        width: 140px;
+	        width: 230px;
 	        height: 100px;
 	        padding: 5px;
 	        position: absolute;
@@ -56,7 +56,7 @@
 
 	<div id="popup" class="popup">
         <div class="popup-content">
-          <p>This web application tracks your eye gaze and utalizes it for algorithmic divination. Please enable your web camera within your phone and browser settings. A red dot appearing during calibration means it's working.</p>
+          <p>This web application tracks your eye gaze and utalizes it for algorithmic divination. Please enable your web camera within your phone and browser settings. A red dot appearing during calibration means it's working. <i>*If you are viewing this page from Instagram, camera functionality may not work. For best experience, open this website directly in Google.*</i></p>
           <br>
         </div>
       </div>
