--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<title>Index</title>
 	<style>
       .popup {
-        display: none;
         position: fixed;
         top: 0;
         left: 0;
@@ -64,18 +63,18 @@
 	<p class="beginp" style="text-align: center;">CLICK ANYWHERE TO BEGIN</p>
 
 	<script>
-	function mouseDown() { //https://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_onmousedown_html
-	  window.location.href = "calibration.html";
-	}
-	window.onload = function() {
-        var popup = document.getElementById('popup');
-        popup.style.display = 'block';
-      }
+	// function mouseDown() { //https://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_onmousedown_html
+	//   window.location.href = "calibration.html";
+	// }
+	// window.onload = function() {
+  //       var popup = document.getElementById('popup');
+  //       popup.style.display = 'block';
+  //     }
 
-      function closePopup() {
-        var popup = document.getElementById('popup');
-        popup.style.display = 'none';
-      }
+  //     function closePopup() {
+  //       var popup = document.getElementById('popup');
+  //       popup.style.display = 'none';
+  //     }
 	</script>
 
 </body>
