--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<div id="popup" class="popup" style="pointer-events: none;">
         <div class="popup-content">
-          <p> (CURRENTLY EXPERIENCING SOME ISSUES. STAND BY) This web application tracks your eye gaze and utalizes it for algorithmic divination. Please enable your web camera within your phone and browser settings. A red dot appearing during calibration means it's working. <i>*If you are viewing this page from Instagram, camera functionality may not work. For best experience, open this website directly in Google.*</i></p>
+          <p>This web application tracks your eye gaze and utalizes it for algorithmic divination. Please enable your web camera within your phone and browser settings. A red dot appearing during calibration means it's working. <i>*If you are viewing this page from Instagram, camera functionality may not work. For best experience, open this website directly in Google.*</i></p>
         </div>
    </div>
 
